@@ -132,6 +132,7 @@ Labels in Info (which also means index entries)
   :
 
 * at the beginning of a line in a @menu
+*note more or less everywhere
 
 
 DocBook
